# ceri-cnn

./: .gitignore  CMakeLists.txt  DeviceBuild.sh  HostBuild.sh  UploadOnFPGA.sh
fpga_build/: Makefile  SetupFPGAEnvironment.sh  kernels.aocx
include/: Headers.h
src/device/: kernels.cl
src/host/: CNN.cpp  CNN.h  Filter.cpp  Helper.cpp  Helper.h  Layer.cpp  Main.cpp  Main.h  Testing.cpp  Testing.h
trash/: Filter.h  Layer.h
